--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Can Comertpay",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.4.5"
   },
   "devDependencies": {
