--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Can Comertpay",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.8.1",
