#Install nodemon auto terminal restarter extencion and #Add .gitignore package-lock.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "API",
     "NodeJS"
   ],
-  "author": "Can Comertpay",
+  "author": "CC",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
