#Install stripe for payment integration

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "stripe": "^13.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
