--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "server": "nodemon server.js",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "API",
